--- a/index.html
+++ b/index.html
@@ -59,7 +59,22 @@
 </script>
 
 <script src="imp_exp_file.js"></script>
-
+<script>
+  (function(){
+    try{
+      var raw = localStorage.getItem(window.LS_KEY_APP || 'gacha_app_state_v1');
+      // 何かしら保存されていれば「ある」とみなす（細かい中身は問わない）
+      var has = !!raw && raw !== 'null' && raw !== '""';
+      window.__HAS_APP = !!has;
+      if (window.__HAS_APP) {
+        // 初回ペイント前に強制で切り替え（ちらつきを防ぐ）
+        var st = document.createElement('style');
+        st.textContent = '#splash{display:none!important} #mainUI{display:block!important}';
+        document.head.appendChild(st);
+      }
+    }catch(e){ window.__HAS_APP = false; }
+  })();
+</script>
 </head>
 <body>
   <div class="container">
@@ -576,7 +591,7 @@ function thumbInnerHTML(it){
   return `<span class="muted">No Image</span>`;
 }
 // スプラッシュ中はスクロール不可
-document.body.classList.add('splash-locked');
+if (!window.__HAS_APP) document.body.classList.add('splash-locked');
 
 // 折りたたみ状態の保存用キーを追加
 const LS_KEY_COLLAPSE = "user_card_collapsed_v1";
