レアリティ設定のセクションが完成

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   import { rarityNameSpanHTML, applyRarityColor } from "/src/rarity_style.js";
   Object.assign(window, { rarityNameSpanHTML, applyRarityColor });
 </script>
+<script src="./src/pt-controls.js"></script>
 <!-- もしローカルに無ければ CDN で補う（任意） -->
 <script>
 (function ensureLibs(){
