discord認証を追加

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
   import { rarityNameSpanHTML, applyRarityColor } from "/src/rarity_style.js";
   Object.assign(window, { rarityNameSpanHTML, applyRarityColor });
 </script>
+<script type="module">
+  import { renderDiscordLoginButton } from "./src/discord-login-button.js";
+
+  // ここでは“未ログイン表示”で描画（ログイン実装時に差し替え）
+  const slot = document.getElementById("discordLoginSlot");
+  renderDiscordLoginButton({
+    mount: slot,
+    loggedIn: false,      // ← ログイン状態に応じて true/false を切替
+    username: "",         // ← ログイン時は Discord の表示名
+    avatarUrl: ""         // ← ログイン時は Discord のアバターURL
+  });
+</script>
 <script src="./src/pt-controls.js"></script>
 <!-- もしローカルに無ければ CDN で補う（任意） -->
 <script>
@@ -116,6 +128,16 @@
         <p>迷ったら <strong>「TXTを読み込む」</strong>から始めるのが簡単です。</p>
       </div>
       <button class="btn" id="openStart">開始する</button>
+      <!-- Discordでログイン（見た目のみ／イベント未登録） -->
+      <button class="btn discord" id="loginDiscord" aria-label="Discordでログイン" style="margin-top:.5rem">
+        <!-- Discord icon (Bootstrap Icons / MIT) -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+            viewBox="0 0 16 16" fill="currentColor" aria-hidden="true"
+            class="bi bi-discord" style="margin-right:.4rem">
+          <path d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"/>
+        </svg>
+        Discordでログイン
+      </button>
       <div class="hint" style="margin-top:.5rem">※ 後からでもJSON読込は可能です</div>
     </section>
 
@@ -136,6 +158,7 @@
             全体インポート
           </label>
           <input type="file" id="importAllInput" accept=".shimmy,application/x-shimmy" style="display:none" />
+          <div id="discordLoginSlot" class="login-area"></div>
         </div>
       </section>
 
