--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -7,6 +7,7 @@
   </head>
   <body class="bg-surface text-surface-foreground">
     <div id="root"></div>
+    <div id="modal-root"></div>
     <script type="module" src="/src/app/main.tsx"></script>
   </body>
 </html>
