--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -18,6 +18,7 @@
   <body class="bg-surface text-surface-foreground">
     <div id="root"></div>
     <div id="modal-root"></div>
+    <script type="module" src="/src/app/preloadTheme.ts"></script>
     <script type="module" src="/src/app/main.tsx"></script>
   </body>
 </html>
