--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,10 +8,11 @@
     />
     <meta name="theme-color" content="#e11d48" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512.png" />
-    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/apps/web/public/icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/apps/web/public/icons/icon-512.png" />
+    <link rel="apple-touch-icon" href="/apps/web/public/icons/icon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Gacha Web</title>
   </head>
