--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -14,7 +14,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Gacha Web</title>
+    <title>四遊楽ガチャ</title>
   </head>
   <body class="bg-surface text-surface-foreground">
     <div id="root"></div>
